Implement production-ready SipGate OAuth2 integration with MongoDB token storage

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -32,3 +32,13 @@ FORCE_COMPLETE_MOCK=true
 
 # Logging Level
 LOG_LEVEL=info
+
+# SipGate OAuth2 Configuration
+SIPGATE_CLIENT_ID=your_sipgate_client_id
+SIPGATE_CLIENT_SECRET=your_sipgate_client_secret
+SIPGATE_REDIRECT_URI=https://your-domain.com/api/auth/sipgate/callback
+SIPGATE_DEVICE_ID=e0
+SIPGATE_CALLER_ID=+491234567890
+
+# Security
+TOKEN_ENCRYPTION_KEY=32_chars_hex_for_aes256_encryption
